--- a/learn.html
+++ b/learn.html
@@ -61,15 +61,15 @@
     <div class="ppt-container">
       <div>
         <h3>🗓️ Lesson 1: Basic Grammar</h3>
-        <iframe src="https://gamma.app/embed/monu0iyd29j3lcc" style="width: 100%; max-width: 100%; height: 600" allow="fullscreen" title="Kickstart Your Grammar Journey"></iframe>
+        <iframe src="https://gamma.app/embed/monu0iyd29j3lcc" style="width: 100%; max-width: 100%; height: 450px" allow="fullscreen" title="Kickstart Your Grammar Journey"></iframe>
       </div>
       <div>
         <h3>🗓️ Lesson 2: Vocabulary Booster</h3>
-        <iframe src="https://gamma.app/embed/ff9h5u7hzmdfqjy" style="width: 700px; max-width: 100%; height: 600" allow="fullscreen" title="Boost Your Vocabulary Power!"></iframe>
+        <iframe src="https://gamma.app/embed/ff9h5u7hzmdfqjy" style="width: 700px; max-width: 100%; height: 450px" allow="fullscreen" title="Boost Your Vocabulary Power!"></iframe>
       </div>
       <div>
         <h3>🗓️ Lesson 3: Daily Conversation Practice</h3>
-        <iframe src="https://gamma.app/embed/mskhixw4k6b8ymo" style="width: 100%; max-width: 100%; height: 600" allow="fullscreen" title="Speak English with Confidence: Daily Conversation Practice"></iframe>
+        <iframe src="https://gamma.app/embed/mskhixw4k6b8ymo" style="width: 100%; max-width: 100%; height: 450px" allow="fullscreen" title="Speak English with Confidence: Daily Conversation Practice"></iframe>
       </div>
     </div>
   </section>
